--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             background-color: gray;
         }
 
+        table, #div-locul-deplasarii
+        {
+            width: 100%;
+        }
+
         @media screen
         {
             body
@@ -163,7 +168,7 @@
 
             #nume, #adresa
             {
-                width: 120mm;
+                width: 100%;
             }
 
             #date-identificare-adresa
@@ -177,11 +182,11 @@
             }
             #locul-deplasarii
             {
-                width: 160mm;
+                width: 100%;
             }
             #activitati-agricole
             {
-                width: 150mm;
+                width: 100%;
             }
 
             #div-locul-deplasarii, #motivul-deplasarii, #data-semnatura
