--- a/index.html
+++ b/index.html
@@ -134,14 +134,15 @@
             body
             {
                 margin-left: 20mm;
-                margin-top: 0mm;
+                margin-top: 5mm;
                 margin-right: 5mm;
-                margin-bottom: 0mm;        
+                margin-bottom: 0mm; 
+                width: 185mm;       
             }
 
             body, td
             {
-                font-size: 4.25mm;
+                font-size: 4.5mm;
             }
 
             h1
