fix the height.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             html
             {
                 width: 210mm;
+                height: 279mm;
             }
 
             body
@@ -125,22 +126,23 @@
                 padding-top: 5mm;
                 padding-right: 5mm;
                 padding-bottom: 0mm; 
+                width: 100%;
             }
 
             body, td
             {
-                font-size: 4mm;
+                font-size: 4.5mm;
             }
 
             h1
             {
-                font-size: 6mm;
+                font-size: 7mm;
                 text-align: center;
             }
 
             h2, input, textarea
             {
-                font-size: 5mm;
+                font-size: 6mm;
                 margin-bottom: 0;
             }
 
