limit width for second column?

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                 transform: scale(1.5);
             }
 
-            #date-identificare-adresa > tbody > tr > td:nth-child(1)
+            #date-identificare-adresa > tbody > tr > td:nth-child(2)
             {
-                width: 50mm;
+                max-width: 110mm;
             }
 
             #date-identificare-adresa
