round the button ...

--- a/index.html
+++ b/index.html
@@ -112,9 +112,15 @@
             #buton-print
             {
                 position: fixed;
-                top: 5px;
-                right: 5px;
+                top: 0px;
+                right: 0px;
                 z-index: 3;
+                padding: 5px;
+                background-color: white;
+                border-left: solid 2px gray;
+                border-bottom: solid 2px gray;
+                border-radius: 0px 0px 0px 8px;
+                cursor: pointer;
             }
 
         }
