free the footer

--- a/index.html
+++ b/index.html
@@ -127,9 +127,13 @@
 
         @media print
         {
-            html
+            html, #footer
             {
                 width: 210mm;
+            }
+
+            html
+            {
                 height: 279mm;
             }
 
@@ -182,8 +186,6 @@
 
             #footer
             {
-                position: fixed;
-                bottom: 5mm;
             }
 
             #data-nasterii, #data-declaratie, #selectare-semnatura
