--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 border-bottom: solid 2px gray;
                 border-radius: 0px 0px 0px 8px;
                 cursor: pointer;
+                font-family: Arial, Verdana;
             }
 
         }
@@ -139,17 +140,18 @@
 
             body
             {
-                margin: 0;
                 padding-left: 20mm;
                 padding-top: 5mm;
                 padding-right: 5mm;
-                padding-bottom: 0mm; 
+                padding-bottom: 5mm; 
                 width: 100%;
+                height: 100%;
             }
 
             body, td
             {
                 font-size: 4.5mm;
+                font-family: "Times New Roman", Times, serif;
             }
 
             h1
