--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
             #date-identificare-adresa > tbody > tr > td:nth-child(2)
             {
-                max-width: 110mm;
+                max-width: 135mm;
             }
 
             #date-identificare-adresa
@@ -346,7 +346,7 @@ Persoanele care au împlinit vârsta de 65 de ani completează doar pentru motiv
 </div>
 
 <div id="buton-print">
-Tipareste
+Tipareste2
 </div>
 
     </body>
