fix the footer, doesn't matter

--- a/index.html
+++ b/index.html
@@ -243,10 +243,16 @@
                 width: 1mm;
                 padding: 0;
             }
-            
+
             #motivul-deplasarii
             {
                 border-spacing: 0;
+            }
+
+            #footer
+            {
+                position: fixed;
+                bottom: 5mm;
             }
 
 }
