--- a/index.html
+++ b/index.html
@@ -339,9 +339,7 @@
 </table>
 <br/>
 Se va bifa doar motivul/motivele deplasării dintre cele prevăzute în listă, nefiind permise deplasări realizate invocând alte motive decât cele prevăzute în Ordonanța Militară nr. 3/2020. Subsemnatul cunosc prevederile art. 326 din Codul Penal cu privire la falsul în declarații și art. 352 din Codul Penal cu privire la zădărnicirea combaterii bolilor.
-
 </div>
-
 <table id="data-semnatura">
     <tr>
         <td><label>Data declarației: <input id="data-declaratie" type="date"></label>
@@ -353,18 +351,14 @@ Se va bifa doar motivul/motivele deplasării dintre cele prevăzute în listă, 
         </td>
     </tr>
 </table>
-
 <div id="footer">
 Persoanele care au împlinit vârsta de 65 de ani completează doar pentru motivele prevăzute în câmpurile 1-6, deplasarea fiind permisă zilnic doar în intervalul orar 11.00 – 13.00, iar în afara intervalului pentru motivele de la punctul 1 și punctul 6
 </div>
-
 <div id="buton-print">
-Tipareste2
+Tipareste
 </div>
-
     </body>
 </html>
-
 <script>
 
     document.getElementById("buton-print").onclick = function () {
