--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
                 z-index: 3;
                 padding: 5px;
                 background-color: white;
-                border-left: solid 2px gray;
-                border-bottom: solid 2px gray;
-                border-radius: 0px 0px 0px 8px;
                 cursor: pointer;
                 font-family: Arial, Verdana;
+                background-image: url('print.svg');
+                background-repeat: no-repeat;
+                background-position: center;
+                width: 32px;
+                height: 32px;
             }
 
         }
@@ -355,7 +357,7 @@ Se va bifa doar motivul/motivele deplasării dintre cele prevăzute în listă, 
 Persoanele care au împlinit vârsta de 65 de ani completează doar pentru motivele prevăzute în câmpurile 1-6, deplasarea fiind permisă zilnic doar în intervalul orar 11.00 – 13.00, iar în afara intervalului pentru motivele de la punctul 1 și punctul 6
 </div>
 <div id="buton-print">
-Tipareste
+
 </div>
     </body>
 </html>
