force a fixed height.

--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
                 width: 210mm;
             }
 
+            html
+            {
+                height: 279mm;
+            }
+
             body
             {
                 padding-left: 20mm;
@@ -255,10 +260,17 @@
                 border-spacing: 0;
             }
 
+            #footer
+            {
+                page-break: avoid;
+            }
+
 }
         </style>
     </head>
     <body>
+
+<div id="buton-print"></div>
 
 <h1>DECLARAȚIE PE PROPRIE RĂSPUNDERE</h1>
 
@@ -361,9 +373,6 @@ Se va bifa doar motivul/motivele deplasării dintre cele prevăzute în listă, 
 </table>
 <div id="footer">
 Persoanele care au împlinit vârsta de 65 de ani completează doar pentru motivele prevăzute în câmpurile 1-6, deplasarea fiind permisă zilnic doar în intervalul orar 11.00 – 13.00, iar în afara intervalului pentru motivele de la punctul 1 și punctul 6
-</div>
-<div id="buton-print">
-
 </div>
     </body>
 </html>
