--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="UTF-8"/>
-        <link rel="manifest" href="manifest.json" />
+        <link rel="manifest" type="text/json" href="manifest.json" />
         <link rel="stylesheet" type="text/css" href="style.css"/>
         
     </head>
