--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ro" xml:lang="ro">
     <head>
 
+        <title>DECLARAȚIE PE PROPRIE RĂSPUNDERE</title>
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta charset="UTF-8"/>
+
+        <meta name="theme-color" content="#ffffff" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff" />
+
+        <link rel="icon" type="image/png" href="icon.png" />
+        <link rel="apple-touch-icon" href="icon-144.png" />
+        <link rel="icon" type="image/png" href="icon-144.png">
+        <link rel="apple-touch-startup-image" type="image/png" href="icon-256.png" />
+
         <link rel="manifest" type="text/json" href="manifest.json" />
         <link rel="stylesheet" type="text/css" href="style.css"/>
         
